[gd_scene load_steps=18 format=3 uid="uid://cyglsdydp0fhr"]

[ext_resource type="Script" uid="uid://dlwtrnoi7mm54" path="res://Enemies/Moustique/moustique.gd" id="1_r0nwy"]
[ext_resource type="PackedScene" uid="uid://nx7n3qyhsmbr" path="res://Enemies/HealthBar.tscn" id="2_2vk4j"]
[ext_resource type="Texture2D" uid="uid://b1tovtbnrhkcl" path="res://Enemies/Moustique/die.png" id="3_2vk4j"]
[ext_resource type="Texture2D" uid="uid://ch2kkrng62f8f" path="res://Enemies/Moustique/attaque1.png" id="4_27a47"]
[ext_resource type="Texture2D" uid="uid://cjhjxfoory1io" path="res://Enemies/Moustique/attaque.png" id="5_nl3xb"]
[ext_resource type="Texture2D" uid="uid://1r02kh5qy1nx" path="res://Enemies/Moustique/moustique.png" id="6_c0yhc"]
[ext_resource type="Texture2D" uid="uid://bh3gu5wckpmu8" path="res://Enemies/Moustique/moustique1.png" id="7_qm3hn"]
[ext_resource type="Texture2D" uid="uid://b806wtm41obwv" path="res://Enemies/Moustique/patrol.png" id="8_27a47"]
[ext_resource type="Texture2D" uid="uid://b0apw11ud66gp" path="res://Enemies/Moustique/patrol1.png" id="9_nl3xb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r0nwy"]
radius = 24.0832

[sub_resource type="CircleShape2D" id="CircleShape2D_g1fhx"]
radius = 11.0454

[sub_resource type="Animation" id="Animation_jin1k"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_2vk4j"), ExtResource("3_2vk4j")]
}

[sub_resource type="Animation" id="Animation_7prnn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2vk4j")]
}

[sub_resource type="Animation" id="Animation_b0e3j"]
resource_name = "attaque"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_27a47"), ExtResource("5_nl3xb")]
}

[sub_resource type="Animation" id="Animation_l6bps"]
resource_name = "flight"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("6_c0yhc"), ExtResource("7_qm3hn")]
}

[sub_resource type="Animation" id="Animation_r0nwy"]
resource_name = "patrol"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("8_27a47"), ExtResource("9_nl3xb")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kcxtp"]
_data = {
&"RESET": SubResource("Animation_7prnn"),
&"attaque": SubResource("Animation_b0e3j"),
&"die": SubResource("Animation_jin1k"),
&"flight": SubResource("Animation_l6bps"),
&"patrol": SubResource("Animation_r0nwy")
}

[node name="Moustique" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_r0nwy")

[node name="Area2D" type="Area2D" parent="." groups=["Enemies"]]
position = Vector2(30.682, 39.089)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-35.682, -69.089)
shape = SubResource("CircleShape2D_r0nwy")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="HealthBar" parent="." instance=ExtResource("2_2vk4j")]
position = Vector2(-61, -158)
scale = Vector2(1.07101, 1.11)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -29)
shape = SubResource("CircleShape2D_g1fhx")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(-1, -34)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_2vk4j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kcxtp")
}
autoplay = "patrol"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
